syntax = "proto3";

package user_attestor;

option go_package = "proto/user_attestor;user_attestor";

// Message definitions
message UserAttestation {
  UserInfo user_info = 2;
}

message UserInfo {
  string name = 1;
  string email = 2;
  string organization = 3;
}

// Define the service
service AttestationService {
  rpc GetUserAttestation(Empty) returns (UserAttestation);
}

// Define an empty message type
message Empty {}